# opengl_practise

./: .gitignore  CMakeLists.txt  main.cpp  main_imgui.cpp  main_test.cpp
assets/glsl/: light_cube.vs  light_lighting.fs  light_lighting.vs  material_cube.fs
demo/: Base.h  Material.cpp  Material.h  illumination.cpp  illumination.h
headers/: Camera.h  Shader.h  illumination.h
include/glm/detail/: type_half.inl
include/glm/ext/: matrix_transform.hpp
lib/: glad.c
lib/imgui/backends/: imgui_impl_sdl.cpp
lib/include/: stb_image.cpp  stb_image.h
lib/include/glm/ext/: matrix_clip_space.inl
lib/include/glm/gtc/: quaternion.inl
sample/: light.cpp  material.cpp
utils/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
